examples/test/testpolicy4661.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4661
  namespace: namespace383
spec:
  podSelector:
    matchLabels:
      key40: value29
      key15: value39
      key28: value15
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key32: value34
          key30: value44
          key25: value47
      podSelector:
        matchLabels:
          key39: value37
          key40: value41
          key3: value12
